--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "remix-i18next",
+  "name": "@roxavn/remix-i18next",
   "version": "5.1.1",
   "description": "The easiest way to translate your Remix apps",
   "license": "MIT",
   "sideEffects": false,
+  "type": "module",
   "browser": {
     "./build": "./browser",
     "./build/backend": false
